@@ -1,6 +1,7 @@
 package com.example.warehouse.service;
 
 import com.example.warehouse.dto.ProductDto;
+import com.example.warehouse.exception.ResourceNotFoundException;
 import com.example.warehouse.mapper.ProductMapper;
 import com.example.warehouse.model.entity.Category;
 import com.example.warehouse.model.entity.Product;
@@ -9,13 +10,14 @@ import com.example.warehouse.repository.CategoryRepository;
 import com.example.warehouse.repository.ProductRepository;
 import com.example.warehouse.repository.SupplierRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ProductService {
@@ -25,10 +27,14 @@ public class ProductService {
     private final SupplierRepository supplierRepository;
     private final ProductMapper productMapper;
 
+    private static final String NOT_FOUND_ID_MSG = "Product not found with id: ";
+    private static final String CATEGORY_NOT_FOUND_MSG = "Category not found with id: ";
+    private static final String SUPPLIER_NOT_FOUND_MSG = "Supplier not found with id: ";
+
     private void setCategoryIfPresent(Product product, Long categoryId) {
         if (categoryId != null) {
             Category category = categoryRepository.findById(categoryId)
-                    .orElseThrow(() -> new RuntimeException("Category not found with id: " + categoryId));
+                    .orElseThrow(() -> new ResourceNotFoundException(CATEGORY_NOT_FOUND_MSG + categoryId));
             product.setCategory(category);
         }
     }
@@ -38,7 +44,7 @@ public class ProductService {
             Set<Supplier> suppliers = new HashSet<>();
             for (Long supplierId : supplierIds) {
                 Supplier supplier = supplierRepository.findById(supplierId)
-                        .orElseThrow(() -> new RuntimeException("Supplier not found with id: " + supplierId));
+                        .orElseThrow(() -> new ResourceNotFoundException(SUPPLIER_NOT_FOUND_MSG + supplierId));
                 suppliers.add(supplier);
             }
             product.setSuppliers(suppliers);
@@ -48,25 +54,25 @@ public class ProductService {
     public List<ProductDto> getAllProducts() {
         return productRepository.findAllWithStocks().stream()
                 .map(productMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ProductDto getProductById(Long id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(NOT_FOUND_ID_MSG + id));
         return productMapper.toDto(product);
     }
 
     public ProductDto getProductWithDetails(Long id) {
         Product product = productRepository.findByIdWithCategory(id)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(NOT_FOUND_ID_MSG + id));
         return productMapper.toDto(product);
     }
 
     public List<ProductDto> getAllProductsWithDetails() {
         return productRepository.findAllWithDetails().stream()
                 .map(productMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -82,7 +88,7 @@ public class ProductService {
     @Transactional
     public ProductDto updateProduct(Long id, ProductDto productDto) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(NOT_FOUND_ID_MSG + id));
 
         product.setName(productDto.getName());
         product.setPrice(productDto.getPrice());
@@ -96,7 +102,7 @@ public class ProductService {
     @Transactional
     public void deleteProduct(Long id) {
         if (!productRepository.existsById(id)) {
-            throw new RuntimeException("Product not found with id: " + id);
+            throw new ResourceNotFoundException(NOT_FOUND_ID_MSG + id);
         }
         productRepository.deleteById(id);
     }
@@ -104,12 +110,12 @@ public class ProductService {
     public List<ProductDto> searchProductsByName(String name) {
         return productRepository.findByNameContainingIgnoreCase(name).stream()
                 .map(productMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ProductDto> getProductsByCategory(Long categoryId) {
         return productRepository.findByCategoryId(categoryId).stream()
                 .map(productMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
